--- a/src/MainPage.css
+++ b/src/MainPage.css
@@ -1,7 +1,20 @@
 .main-page {
+  width: 100%;
     padding: 20px;
     background-color: white;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
   
+.main-header {
+  align-content: center;
+  text-align: center;
+}
+
+.main-pic {
+  margin-top: 80px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
