přidán tooltip na řádek s poznámkou

--- a/src/DocumentManagement.css
+++ b/src/DocumentManagement.css
@@ -222,6 +222,7 @@ tr:hover .eye-icon {
   .filter-icons {
     display: flex;
     align-items: center;
+    margin-bottom: 10px;
   }
   
   .filter-icon,
